--- a/PROJECT/index.html
+++ b/PROJECT/index.html
@@ -8,6 +8,9 @@
     <script src="script.js"></script>
  </head>
  <body>
-    
+  <script>
+    console.log("Сәлем, JavaScript!");
+  </script>
+  <h1>JavaScripts</h1>
  </body>
  </html>  
